--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "angular-io-datepicker": "^1.3.1",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
+    "ng-auto-complete": "^1.4.12",
     "ng-pick-datetime": "^4.3.1",
+    "ng2-completer": "^1.6.1",
     "ng2-date-picker": "^2.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
