--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "ng-pick-datetime": "^4.3.1",
     "ng2-completer": "^1.6.1",
     "ng2-date-picker": "^2.3.0",
+    "ngx-modialog": "^3.0.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.3",
+    "@angular/cli": "^1.0.3",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
