--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@angular/animations": "^4.0.1",
     "angular-io-datepicker": "^1.3.1",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
@@ -28,6 +29,8 @@
     "ng2-completer": "^1.6.1",
     "ng2-date-picker": "^2.3.0",
     "ngx-modialog": "^3.0.2",
+    "primeng": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
