--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.1",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -20,17 +21,17 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@angular/animations": "^4.0.1",
     "angular-io-datepicker": "^1.3.1",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ng-auto-complete": "^1.4.12",
     "ng-pick-datetime": "^4.3.1",
     "ng2-completer": "^1.6.1",
     "ng2-date-picker": "^2.3.0",
     "ngx-modialog": "^3.0.2",
+    "ngx-typeahead": "0.0.21",
     "primeng": "^4.1.0",
-    "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
