--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/jquery": "^2.0.47",
     "angular-io-datepicker": "^1.3.1",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
@@ -30,6 +31,7 @@
     "ng-pick-datetime": "^4.3.1",
     "ng2-completer": "^1.6.1",
     "ng2-date-picker": "^2.3.0",
+    "ngx-bootstrap": "^1.9.3",
     "ngx-modialog": "^3.0.2",
     "ngx-typeahead": "0.0.21",
     "primeng": "^4.1.0",
